apply plugin: 'java'
apply plugin: 'jacoco'

repositories {
    mavenCentral()
}

sourceCompatibility = 18
targetCompatibility = 18
version = '2.0.0'
group = 'xml.spreadsheet'
jar.archiveName = "XMLSpreadsheetGenerator.jar"

jar {
    manifest {
        attributes 'Implementation-Title': 'XML Spreadsheet Generator', 'Implementation-Version': version
    }
}

dependencies {
	testImplementation group: 'junit', name: 'junit', version: '4.12'
    testImplementation 'jdom:jdom:1.1'
    testImplementation 'jaxen:jaxen:1.2.0'
}

compileJava.options.compilerArgs.add('--enable-preview')

// Jacoco configuration

jacoco {
    toolVersion = "0.8.8"
}

jacocoTestReport {
    reports {
        xml.enabled true
        csv.enabled false
    }
}

test {
    finalizedBy jacocoTestReport // report is always generated after tests run
}

javadoc {
    source = sourceSets.main.allJava
    classpath = configurations.implementation
}

test {
    testLogging {
        events "PASSED", "SKIPPED", "FAILED", "STANDARD_OUT"
        showStandardStreams = true
    }
}
